# s3_py_photogallery

./: LICENSE  README.md  config.py.example  pyproject.toml  requirements.txt  s3_test.py  start.sh
instance/: config.py
s3-pygallery/: __init__.py  core.py  db_update.py  s3.py
s3_pygallery/: __init__.py  admin.py  api.py  core.py  db_update.py  handle_request.py  main.py  s3.py  users.py
s3_pygallery/static/: gallery.css  global.css  jquery.min.js  package-lock.json  package.json  style.css
s3_pygallery/templates/: gallery.html  login.html  metadata.html  metadata2.html  overview.html  users.html
